--- a/business/templates/financingProducts/businessCreditCard.html
+++ b/business/templates/financingProducts/businessCreditCard.html
@@ -189,6 +189,7 @@
                         Business Credit Cards
                     </div>
                     <div class="card-body">
+                    <div class="table-responsive">
                         <table id="datatable" class="table table-striped dt-responsive nowrap">
                             <tbody>
                             <thead>
@@ -226,7 +227,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-
+                    </div>
                     </div>
                 </div>
             </div>
