--- a/business/templates/financingProducts/shortTermLoans.html
+++ b/business/templates/financingProducts/shortTermLoans.html
@@ -39,34 +39,35 @@
                         Lenders
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
-                            <thead>
-                            <tr>
-                                <th>Lender Name</th>
-                                <th>Personal Credit Score Needed</th>
-                                <th>Time In Business</th>
-                                <th>Term Length</th>
-                                <th>APR</th>
-                                <th>Strategy</th>
-                                <th>Apply Now</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for loan  in short_term_loans %}
+                        <div class="table-responsive">
+                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                                <thead>
                                 <tr>
-                                    <td>{{ loan.lender_name }} </td>
-                                    <td>{{ loan.personal_credit_score }}</td>
-                                    <td>{{ loan.time_in_business }}</td>
-                                    <td>{{ loan.term_length }}</td>
-                                    <td>{{ loan.apr }}</td>
-                                    <td>{{ loan.strategy }}</td>
-                                    <td><a class="btn btn-sm btn-primary" href="{% url 'business:apply-loans' %}">Apply
-                                        Now</a></td>
+                                    <th>Lender Name</th>
+                                    <th>Personal Credit Score Needed</th>
+                                    <th>Time In Business</th>
+                                    <th>Term Length</th>
+                                    <th>APR</th>
+                                    <th>Strategy</th>
+                                    <th>Apply Now</th>
                                 </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-
+                                </thead>
+                                <tbody>
+                                {% for loan  in short_term_loans %}
+                                    <tr>
+                                        <td>{{ loan.lender_name }} </td>
+                                        <td>{{ loan.personal_credit_score }}</td>
+                                        <td>{{ loan.time_in_business }}</td>
+                                        <td>{{ loan.term_length }}</td>
+                                        <td>{{ loan.apr }}</td>
+                                        <td>{{ loan.strategy }}</td>
+                                        <td><a class="btn btn-sm btn-primary" href="{% url 'business:apply-loans' %}">Apply
+                                            Now</a></td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
