--- a/business/templates/financingProducts/invoiceFactoring.html
+++ b/business/templates/financingProducts/invoiceFactoring.html
@@ -38,55 +38,42 @@
                         Lenders
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
-                            <thead>
-                            <tr>
-                                <th>Lender Name</th>
-                                <th>Personal Credit Score Needed</th>
-                                <th>Business Revenue Needed</th>
-                                <th>Time In Business Needed</th>
-                                <th>APR</th>
-                                <th>Strategy</th>
-                                <th>Apply Now</th>
-                            </tr>
-                            </thead>
-
-
-                            <tbody>
-                            {% for invoice in data_list %}
+                        <div class="table-responsive">
+                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                                <thead>
                                 <tr>
-                                    <td>{{ invoice.lender_name }}</td>
-                                    <td>{{ invoice.personal_credit_score }}</td>
-                                    <td>{{ invoice.business_revenue }}</td>
-                                    <td>{{ invoice.time_in_business }}</td>
-                                    <td>{{ invoice.apr }}</td>
-                                    <td>{{ invoice.strategy }}</td>
-                                    <td>
-                                        <a href="{% url 'business:apply-loans' %}" class="btn btn-sm btn-primary">Apply
-                                            Now</a>
-                                    </td>
+                                    <th>Lender Name</th>
+                                    <th>Personal Credit Score Needed</th>
+                                    <th>Business Revenue Needed</th>
+                                    <th>Time In Business Needed</th>
+                                    <th>APR</th>
+                                    <th>Strategy</th>
+                                    <th>Apply Now</th>
                                 </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
+                                </thead>
 
+
+                                <tbody>
+                                {% for invoice in data_list %}
+                                    <tr>
+                                        <td>{{ invoice.lender_name }}</td>
+                                        <td>{{ invoice.personal_credit_score }}</td>
+                                        <td>{{ invoice.business_revenue }}</td>
+                                        <td>{{ invoice.time_in_business }}</td>
+                                        <td>{{ invoice.apr }}</td>
+                                        <td>{{ invoice.strategy }}</td>
+                                        <td>
+                                            <a href="{% url 'business:apply-loans' %}" class="btn btn-sm btn-primary">Apply
+                                                Now</a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-        </div>
-
-
-        </div>
-
-
-        </form>
-        </div>
-        </div>
-        </form>
-        </div>
-        </div>
         </div>
 
 
