--- a/business/templates/financingProducts/personalCreditCard.html
+++ b/business/templates/financingProducts/personalCreditCard.html
@@ -38,41 +38,43 @@
                         Lenders You Qualify For
                     </div>
                     <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap">
-                            <thead>
-                            <tr>
-                                <th>Credit Card Name</th>
-                                <th>Min Credit Score Needed</th>
-                                <th>Credit Bureau They Pull From</th>
-                                <th>Debt Ratio Needed</th>
-                                <th>Bankruptcy</th>
-                                <th>Derogatory Credit Data</th>
-                                <th>APR</th>
-                                <th>Misc. Information</th>
-                                <th>Apply Now</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for cc in personal_credit_cards %}
+                        <div class="table-responsive">
+                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                                <thead>
                                 <tr>
-                                    <td>{{ cc.cc_name }}</td>
-                                    <td>{{ cc.min_credit_score }}</td>
-                                    <td>{{ cc.credit_bureau }}</td>
-                                    <td>{{ cc.debt_ratio }}</td>
-                                    <td>{{ cc.bankruptcy }}</td>
-                                    <td>{{ cc.credit_data }}</td>
-                                    <td>{{ cc.apr }}</td>
-                                    <td>{{ cc.misc_info }}</td>
-                                    <td><a href="{{ cc.get_url }}" target="_blank">
-                                        <button type="submit" class="btn btn-primary" name="signup" value="Apply Now">
-                                            Apply Now
-                                        </button>
-                                    </a></td>
+                                    <th>Credit Card Name</th>
+                                    <th>Min Credit Score Needed</th>
+                                    <th>Credit Bureau They Pull From</th>
+                                    <th>Debt Ratio Needed</th>
+                                    <th>Bankruptcy</th>
+                                    <th>Derogatory Credit Data</th>
+                                    <th>APR</th>
+                                    <th>Misc. Information</th>
+                                    <th>Apply Now</th>
                                 </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-
+                                </thead>
+                                <tbody>
+                                {% for cc in personal_credit_cards %}
+                                    <tr>
+                                        <td>{{ cc.cc_name }}</td>
+                                        <td>{{ cc.min_credit_score }}</td>
+                                        <td>{{ cc.credit_bureau }}</td>
+                                        <td>{{ cc.debt_ratio }}</td>
+                                        <td>{{ cc.bankruptcy }}</td>
+                                        <td>{{ cc.credit_data }}</td>
+                                        <td>{{ cc.apr }}</td>
+                                        <td>{{ cc.misc_info }}</td>
+                                        <td><a href="{{ cc.get_url }}" target="_blank">
+                                            <button type="submit" class="btn btn-primary" name="signup"
+                                                    value="Apply Now">
+                                                Apply Now
+                                            </button>
+                                        </a></td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
