--- a/getdinerotoday/templates/pages/base-marketingcourse.html
+++ b/getdinerotoday/templates/pages/base-marketingcourse.html
@@ -142,6 +142,7 @@
                          <li class="nav-item"><a href="{% url 'marketingcourse:youtube' %}" class="nav-link">How To Do Youtube Ads</a></li>
                      </ul>
                   </li>
+                  <li class="nav-item"><a href="{% url 'marketingcourse:coupons' %}" class="nav-link">Get $500+ In Free Marketing With Coupons</a></li>
                </ul>
             </div>
          </div>
