--- a/business/templates/marketingYourBusiness.html
+++ b/business/templates/marketingYourBusiness.html
@@ -29,9 +29,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/pvZMgOeAF_4" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+              <iframe width="100%" height="515" src="https://www.youtube.com/embed/ksiIRDFZ4HY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <style media="screen">
@@ -67,7 +65,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary"
-                                   href="https://howardkingston.com/hustlers-guide-1420-free-ad-credit/">Click Here To
+                                   href="{% url 'marketingcourse:coupons' %}">Click Here To
                                     Get <br> $500+ In Advertising Coupons</a>
                             </div>
                         </div>
