--- a/goals/templates/goals/create_my_portal.html
+++ b/goals/templates/goals/create_my_portal.html
@@ -28,9 +28,7 @@
 </div>
   </div>
       <div class="col-md-6">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/d1orlaf11PE" frameborder="0"
-                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen></iframe>
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/_EwOUUkg7hA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   </div>
   </div>
